# bimmer

./: .env.example  .gitignore  .justfile  .pre-commit-config.yaml  Dockerfile.backend  Dockerfile.frontend  LICENSE  README.md  docker-compose.yaml  entrypoint.sh  models.py
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: pre-commit.yaml
.quickstart/: setup.ps1  vscode-extensions.txt  vscode-settings.json
bimmer/: pyproject.toml
bimmer/apps/accounts/: choices.py  models.py
bimmer/apps/accounts/migrations/: 0001_initial.py  0002_alter_address_country_and_more.py
bimmer/apps/core/: views.py
bimmer/config/: settings.py  urls.py
web-app/: .prettierrc  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web-app/src/: App.css  App.tsx  index.css  swiper.d.ts
web-app/src/api/: health.ts
web-app/src/components/advertisement/advertisement-card/: AdvertisementCard.css  AdvertisementCard.tsx
web-app/src/components/advertisement/advertisement-detail/: AdvertisementDetail.css  AdvertisementDetail.tsx
web-app/src/components/advertisement/advertisement-grid/: AdvertisementGrid.css  AdvertisementGrid.tsx
web-app/src/components/appearance/theme-toggle/: ThemeToggle.css  ThemeToggle.tsx
web-app/src/components/base/header/: Header.css  Header.tsx
web-app/src/components/base/sidebar/: Sidebar.css  Sidebar.tsx
web-app/src/components/base/state/empty-state/: EmptyState.css  EmptyState.tsx
