[project]
name = "bimmer"
version = "0.1.0"
description = "Bimmer - A user-friendly platform for vehicle advertisements."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0",
    "django-cors-headers>=4.9.0",
    "djangorestframework>=3.16.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ty>=0.0.5",
]

[tool.ty.environment]
root = ["."]
